--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/mq/style-mq.css">
     <link rel="stylesheet" href="styles/extras.css">
+    <link rel="shortcut icon" href="icon/pokeball-icon.png" type="image/x-icon">
     <title>Pokémon API</title>
 </head>
 <body>
